log.txt
aiohttp/_websocket.c: In function ‘__Pyx_CLineForTraceback’:
aiohttp/_websocket.c:2741:9: warning: ‘ma_version_tag’ is deprecated [-Wdeprecated-declarations]
 2741 |         __PYX_PY_DICT_LOOKUP_IF_MODIFIED(
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/local/include/python3.13/cpython/dictobject.h:25:34: note: declared here
   25 |     Py_DEPRECATED(3.12) uint64_t ma_version_tag;
      |                                  ^~~~~~~~~~~~~~
aiohttp/_websocket.c:2741:9: warning: ‘ma_version_tag’ is deprecated [-Wdeprecated-declarations]
 2741 |         __PYX_PY_DICT_LOOKUP_IF_MODIFIED(
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/local/include/python3.13/cpython/dictobject.h:25:34: note: declared here
   25 |     Py_DEPRECATED(3.12) uint64_t ma_version_tag;
      |                                  ^~~~~~~~~~~~~~
aiohttp/_websocket.c: In function ‘__Pyx_PyInt_As_long’:
aiohttp/_websocket.c:3042:53: error: ‘PyLongObject’ {aka ‘struct _longobject’} has no member named ‘ob_digit’
 3042 |             const digit* digits = ((PyLongObject*)x)->ob_digit;
      |                                                     ^~
aiohttp/_websocket.c:3097:53: error: ‘PyLongObject’ {aka ‘struct _longobject’} has no member named ‘ob_digit’
 3097 |             const digit* digits = ((PyLongObject*)x)->ob_digit;
      |                                                     ^~
aiohttp/_websocket.c:3183:27: error: too few arguments to function ‘_PyLong_AsByteArray’
 3183 |                 int ret = _PyLong_AsByteArray((PyLongObject *)v,
      |                           ^~~~~~~~~~~~~~~~~~~
In file included from /usr/local/include/python3.13/longobject.h:107,
                 from /usr/local/include/python3.13/Python.h:81:
/usr/local/include/python3.13/cpython/longobject.h:111:17: note: declared here
  111 | PyAPI_FUNC(int) _PyLong_AsByteArray(PyLongObject* v,
      |                 ^~~~~~~~~~~~~~~~~~~
aiohttp/_websocket.c: In function ‘__Pyx_PyInt_As_int’:
aiohttp/_websocket.c:3238:53: error: ‘PyLongObject’ {aka ‘struct _longobject’} has no member named ‘ob_digit’
 3238 |             const digit* digits = ((PyLongObject*)x)->ob_digit;
      |                                                     ^~
aiohttp/_websocket.c:3293:53: error: ‘PyLongObject’ {aka ‘struct _longobject’} has no member named ‘ob_digit’
 3293 |             const digit* digits = ((PyLongObject*)x)->ob_digit;
      |                                                     ^~
aiohttp/_websocket.c:3379:27: error: too few arguments to function ‘_PyLong_AsByteArray’
 3379 |                 int ret = _PyLong_AsByteArray((PyLongObject *)v,
      |                           ^~~~~~~~~~~~~~~~~~~
/usr/local/include/python3.13/cpython/longobject.h:111:17: note: declared here
  111 | PyAPI_FUNC(int) _PyLong_AsByteArray(PyLongObject* v,
      |                 ^~~~~~~~~~~~~~~~~~~
aiohttp/_websocket.c: In function ‘__Pyx_PyIndex_AsSsize_t’:
aiohttp/_websocket.c:3744:45: error: ‘PyLongObject’ {aka ‘struct _longobject’} has no member named ‘ob_digit’
 3744 |     const digit* digits = ((PyLongObject*)b)->ob_digit;
      |                                             ^~
error: command '/usr/bin/gcc' failed with exit code 1
[end of output]

note: This error originates from a subprocess, and is likely not a problem with pip.
ERROR: Failed building wheel for aiohttp
Building wheel for pymongo (pyproject.toml): started
Building wheel for pymongo (pyproject.toml): finished with status 'done'
Created wheel for pymongo: filename=pymongo-4.7.0-cp313-cp313-linux_x86_64.whl size=677840 sha256=31d50db26703e09c2706a5f76de013fbef0fcc9962d6e52beaab71bf6b0970c5
Stored in directory: /opt/render/.cache/wheels/48/5e/25/ded539391fd69ac91a1c50c5bba2e1a1e9538b8dc108bc1740
Building wheel for PyYAML (pyproject.toml): started
Building wheel for PyYAML (pyproject.toml): finished with status 'done'
Created wheel for PyYAML: filename=pyyaml-6.0.1-cp313-cp313-linux_x86_64.whl size=45459 sha256=d8e9390f03e1b41fc912b50174b64afbd1902088b7d03d94a37a775457cae027
Stored in directory: /opt/render/.cache/wheels/9c/9e/34/1e1548811b63a9d001469f21797e8b7d5c216d8eb928e7d6ad
Successfully built pymongo PyYAML
Failed to build aiohttp
ERROR: Failed to build installable wheels for some pyproject.toml based projects (aiohttp)
==> Build failed 😞
==> Common ways to troubleshoot your deploy: https://render.com/docs/troubleshooting-deploys